# pomegranate

./: .easignore  .gitignore  .prettierignore  .release-please-config.json  CHANGELOG.md  LICENSE  NOTICE.md  PomegranateDB.podspec  README.md  TODO.md  babel.config.js  eslint.config.mjs  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/prompts/: todo-to-pr.prompt.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
demos/bare-rn-todo/: App.tsx  README.md  app.json  empty-module.js  metro.config.js  package-lock.json  package.json  tsconfig.json
demos/bare-rn-todo/android/: settings.gradle
demos/bare-rn-todo/android/app/: build.gradle
demos/bare-rn-todo/ios/: Podfile
demos/bare-rn-todo/ios/BareRNTodo/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
demos/bare-rn-todo/ios/BareRNTodo.xcodeproj/: project.pbxproj
demos/bare-rn-todo/maestro/: add-todo.yaml  delete-todo.yaml  full-flow.yaml  run-benchmarks.yaml  toggle-todo.yaml
demos/bare-rn-todo/src/: database.ts
demos/expo-go/: App.tsx  README.md  app.json  assets  metro.config.js  package.json
demos/expo-todo/: .gitignore  App.tsx  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  playwright.config.ts  serve-coi.mjs  tsconfig.json
demos/expo-todo/e2e/: benchmark.spec.ts  todo.spec.ts
demos/expo-todo/maestro/: add-todo.yaml  delete-todo.yaml  full-flow.yaml  run-benchmarks.yaml  toggle-todo.yaml
demos/expo-todo/src/: database.ts
demos/shared/: AdapterPicker.tsx  benchmarks.ts  styles.ts  tsconfig.json
docs-website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-website/docs/: architecture.md  contributing.md  crud.md  database.md  getting-started.md  installation.md  models.md  observation.md  queries.md  react-hooks.md  schema.md  sync.md
docs-website/docs/adapters/: expo-sqlite.md  loki.md  native-jsi.md  op-sqlite.md  overview.md  sqlite.md
docs-website/docs/advanced/: encryption.md  migrations.md  performance.md
docs-website/src/components/: SnackEmbed.tsx
docs-website/src/css/: custom.css
docs-website/src/pages/: index.js
expo-plugin/: index.ts  tsconfig.json
native/: .clang-format  .editorconfig
native/android-jsi/: build.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt  DatabasePlatformAndroid.cpp  DatabasePlatformAndroid.h  JSIInstaller.cpp
native/androidTest/: build.gradle  gradle.properties  settings.gradle
native/androidTest/app/: build.gradle
native/androidTest/app/src/main/res/values/: strings.xml
native/expoTest/: .gitignore  App.tsx  app.json  metro.config.js  package.json  tsconfig.json
native/ios/: DatabasePlatformIOS.mm  PomegranateJSI.h  PomegranateJSI.mm
native/shared/: Database.cpp  Database.h  Sqlite.cpp  Sqlite.h
scripts/: pack-demo-tarball  setup-sqlite  test-android  test-android-expo
src/: expo.ts  index.integrationTests.native.tsx  index.ts  vendor.d.ts
src/__tests__/: adapter.test.ts  batch.test.ts  collection.test.ts  encryption-e2e.test.ts  encryption.test.ts  expo-web.test.ts  expo.test.ts  integration.test.ts  migration-e2e.test.ts  model.test.ts  observable.test.ts  query.test.ts  schema.test.ts  sql.test.ts  sqlite-adapter.test.ts  sync.test.ts  utils.test.ts  web-native.test.ts  web.test.ts  worker.test.ts
src/adapters/: index.ts  types.ts
src/adapters/expo-sqlite/: ExpoSQLiteDriver.ts  index.ts
src/adapters/loki/: LokiAdapter.ts  index.ts
src/adapters/loki/worker/: LokiDispatcher.ts  LokiExecutor.ts  SynchronousWorker.ts  loki.worker.ts  types.ts
src/adapters/loki/worker/__tests__/: LokiDispatcher.test.ts  SynchronousWorker.test.ts
src/adapters/native-sqlite/: NativeSQLiteDriver.ts  index.ts
src/adapters/native-sqlite/__tests__/: NativeSQLiteDriver.test.ts
src/adapters/op-sqlite/: OpSQLiteDriver.ts  index.ts
src/adapters/op-sqlite/__tests__/: OpSQLiteDriver.test.ts
src/adapters/sqlite/: SQLiteAdapter.ts  index.ts  sql.ts
src/collection/: Collection.ts  index.ts
src/database/: Database.ts  index.ts
src/encryption/: index.ts  node.ts  nodeCrypto.native.ts  nodeCrypto.ts  react-native.ts
src/hooks/: index.ts
src/integrationTests/: index.ts  runner.ts  tests.ts
src/model/: Model.ts  Relation.ts  index.ts
src/observable/: Subject.ts  index.ts
src/query/: QueryBuilder.ts  index.ts  types.ts
src/schema/: builder.ts  index.ts  types.ts
src/sync/: index.ts  sync.ts  types.ts
src/utils/: index.ts
(+12 files in other folders)
